# HEAL

./: .env.example  .gitignore  AGENTS_ANALYSIS.md  CURRENT_FOCUS.md  ERRATA.md  QUICKSTART_COMPARISON.md  README.md  SCALAR_VECTOR_FIXES.md  TESTING_SUMMARY.md  pyproject.toml
.test_rag_comparison/: baseline_test.yaml  rag_test.yaml
.test_rag_comparison/baseline_results/: evaluation_20260421_141730_detailed.csv  evaluation_20260421_141730_summary.json  evaluation_20260421_141730_summary.txt
.test_rag_comparison/rag_results/: evaluation_20260421_142139_detailed.csv  evaluation_20260421_142139_summary.json  evaluation_20260421_142139_summary.txt
data/solr_docs/: common_params.md  edismax.md  query_syntax.md
docs/: BOOTSTRAP_GUIDE.md  HEAL_DEMO_2026.md  HEAL_SLIDES_OUTLINE.md  INTEGRATE_RAG_AGENT.md  MULTI_AGENT_SOLR_OPTIMIZATION.md  OKP_DOCUMENTATION_GAPS_REPORT.md  PATTERN_DATABASE_INTEGRATION.md  PORTABILITY_FIXES.md  RAG_EXTRACTION_TESTING.md  README_COMPARISON.md  RETRIEVAL_COMPARISON_SUMMARY.md  RETRIEVAL_OPTIMIZATION_FINDINGS.md
ops/: README.md  heal-hitch.sh  heal-update.sh  install.sh
runners/: fix.sh
scripts/: analyze_metric_correlations.py  analyze_rag_extraction_quality.py  compare_extracted_yamls.py  compare_okp_vs_baseline.py  compare_okp_vs_baseline_OLD.py  convert_fixture_to_validation_checkpoints.py  eval_rag_vs_baseline.py  extract_cache_to_json.py  inspect_cache.py  okp_mcp_cached_results.json  validate_yaml_urls.py
tests/: test_agent_model_usage.py  test_base_agent_token_tracking.py  test_config.py  test_imports.py  test_jira_integration.py  test_linux_expert.py  test_multi_agent_system.py  test_nested_loop_integration.py  test_okp_mcp_agent.py  test_pattern_evaluation_refactor.py  test_pattern_evaluation_with_fixtures.py  test_pattern_fix_logic.py  test_per_ticket_success.py  test_pr_creator.py  test_solr_expert.py  test_solr_multi_agent.py  test_solr_multi_agent_README.md  test_ticket_evaluation.py  test_token_tracker.py  test_url_validation_agent.py
(+40 files in other folders)
