[project]
name = "heal"
version = "0.1.0"
description = "HEAL: Hidden Engine for Autonomous Labor - Autonomous agent system for RAG diagnostics and fixes"
authors = [
    {name = "Red Hat Lightspeed Team", email = "lightspeed@redhat.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["agent", "rag", "evaluation", "jira", "automation", "llm"]

dependencies = [
    # Core agent dependencies
    "claude-agent-sdk>=0.1.54",
    "pydantic>=2.0.0",

    # Data handling
    "pyyaml>=6.0",
    "pandas>=2.1.4",

    # HTTP clients
    "httpx>=0.27.2",
    "requests>=2.31.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
]

[project.scripts]
heal = "heal.runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heal"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_return_any = false  # Too noisy for migrated code
warn_unused_configs = true
disallow_untyped_defs = false

# Ignore missing imports for MCP modules (dynamically loaded)
[[tool.mypy.overrides]]
module = "mcp__mcp_atlassian"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.agents.conftest"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20260408",
]
